# simplereaderd

./: .gitignore  CMakeLists.txt  README.md  add_user.sh  simplereader.conf  tmp.txt
include/: Config.h  Database.h  SessionManager.h  dh_check.h  dh_delete.h  dh_get.h  dh_getBook.h  dh_getSince.h  dh_login.h  dh_resolve.h  dh_root.h  dh_ruOK.h  dh_update.h  dh_uploadBook.h  dhutils.h  utils.h  version.h
src/: Config.cpp  Database.cpp  SessionManager.cpp  dh_check.cpp  dh_delete.cpp  dh_get.cpp  dh_getBook.cpp  dh_getSince.cpp  dh_login.cpp  dh_resolve.cpp  dh_root.cpp  dh_ruOK.cpp  dh_update.cpp  dh_uploadBook.cpp  dhutils.cpp  main.cpp  utils.cpp
tools/: add_user  add_user.c
